--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vladimir-yuldashev/laravel-queue-rabbitmq",
+    "name": "housfy/laravel-queue-rabbitmq",
     "description": "RabbitMQ driver for Laravel Queue. Supports Laravel Horizon.",
     "license": "MIT",
     "authors": [
@@ -24,12 +24,12 @@
     },
     "autoload": {
         "psr-4": {
-            "VladimirYuldashev\\LaravelQueueRabbitMQ\\": "src/"
+            "Housfy\\LaravelQueueRabbitMQ\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VladimirYuldashev\\LaravelQueueRabbitMQ\\Tests\\": "tests/"
+            "Housfy\\LaravelQueueRabbitMQ\\Tests\\": "tests/"
         }
     },
     "extra": {
@@ -38,7 +38,7 @@
         },
         "laravel": {
             "providers": [
-                "VladimirYuldashev\\LaravelQueueRabbitMQ\\LaravelQueueRabbitMQServiceProvider"
+                "Housfy\\LaravelQueueRabbitMQ\\LaravelQueueRabbitMQServiceProvider"
             ]
         }
     },
