--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,15 @@
     "require": {
         "php": "^8.4",
         "ext-json": "*",
-        "illuminate/queue": "^9.0|^10.0",
         "php-amqplib/php-amqplib": "^v3.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.3",
+        "phpunit/phpunit": "^11.3.6",
         "mockery/mockery": "^1.0",
         "laravel/horizon": "^5.0",
-        "orchestra/testbench": "^7.0|^8.0",
+        "orchestra/testbench": "^9.11.0",
         "laravel/pint": "^1.2",
-        "laravel/framework": "^9.0|^10.0"
+        "laravel/framework": "^11.38.0"
     },
     "autoload": {
         "psr-4": {
