--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,18 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.4",
         "ext-json": "*",
-        "php-amqplib/php-amqplib": "^3.2"
+        "illuminate/queue": "^11.0",
+        "php-amqplib/php-amqplib": "^v3.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5 || ^10.0",
-        "mockery/mockery": "^1.5",
-        "laravel/horizon": "^5.0",
-        "laravel/framework": "^9.0|^10.0|^11.0",
-        "orchestra/testbench": "^7.0|^8.0|^9.0",
-        "laravel/pint": "^1.2"
+        "phpunit/phpunit": "^11.0",
+        "mockery/mockery": "^1.6",
+        "laravel/horizon": "^5.31",
+        "orchestra/testbench": "^9.0",
+        "laravel/pint": "^1.13",
+        "laravel/framework": "^11.0"
     },
     "autoload": {
         "psr-4": {
